Fix for faulty file:// URI fixup which fixed anything containing a backslash. b=75063 r=valeski@netscape.com sr=rpotts@netscape.com